# BTKCore

./: .appveyor.yml  .drone.yml  .gitattributes  .travis.yml  CMakeLists.txt  Copyright.txt  EasyInstallWithRedistribuableMatlabToolbox_MSVC.bat  EasyInstallWithRedistribuableMatlabToolbox_MSVC2008.bat  EasyInstallWithRedistribuableScilabToolbox_MSVC.bat  LICENSE  README.md  Readme.html  Readme.md  btkConfigure.h.in  config.h.in
Code/Base/: CMakeLists.txt  btkAlgorithm.cpp  btkAlgorithm.h  btkAlgorithm_p.h  btkAny.cpp  btkAny.h  btkAny.tpp  btkDataFactory.cpp  btkDataFactory.h  btkException.h  btkExecutive.cpp  btkExecutive.h  btkExecutive_p.h  btkInformation.cpp  btkInformation.h  btkInformation_p.h  btkLogger.cpp  btkLogger.h  btkMacros.h  btkNode.cpp  btkNode.h  btkNode_p.h  btkNodeid.h  btkObject.cpp  btkObject.h  btkObject_p.h  btkOpaque.h  btkPort.cpp  btkPort.h  btkPort_p.h  btkProperty.h  btkShared.h  btkTypeTraits.h  btkTypeid.h  btklardXpr.h  btklardXpr_returnByValue.h  btkutils.h
Code/BasicFilters/: CMakeLists.txt  btkAcquisitionUnitConverter.cpp  btkAcquisitionUnitConverter.h  btkAnalogOffsetRemover.cpp  btkAnalogOffsetRemover.h  btkCollectionAssembly.h  btkDownsampleFilter.h  btkForcePlatformWrenchFilter.cpp  btkForcePlatformWrenchFilter.h  btkForcePlatformsExtractor.cpp  btkForcePlatformsExtractor.h  btkGroundReactionWrenchFilter.cpp  btkGroundReactionWrenchFilter.h  btkIMUsExtractor.cpp  btkIMUsExtractor.h  btkMeasureFrameExtractor.h  btkMergeAcquisitionFilter.cpp  btkMergeAcquisitionFilter.h  btkSeparateKnownVirtualMarkersFilter.cpp  btkSeparateKnownVirtualMarkersFilter.h  btkSpecializedPointsExtractor.cpp  btkSpecializedPointsExtractor.h  btkSubAcquisitionFilter.cpp  btkSubAcquisitionFilter.h  btkVerticalGroundReactionForceGaitEventDetector.cpp  btkVerticalGroundReactionForceGaitEventDetector.h  btkWrenchDirectionAngleFilter.cpp  btkWrenchDirectionAngleFilter.h
Code/Common/: CMakeLists.txt  btkAcquisition.cpp  btkAcquisition.h  btkAnalog.cpp  btkAnalog.h  btkAnalogCollection.h  btkAny.cpp  btkAny.h  btkAny.tpp  btkAny_cast.tpp  btkAny_converter.tpp  btkAny_converter_helper.tpp  btkAny_details.tpp  btkAny_storage.tpp  btkAny_traits.tpp  btkCollection.h  btkConvert.h  btkCriticalSection_p.cpp  btkCriticalSection_p.h  btkDataObject.cpp  btkDataObject.h  btkEvent.cpp  btkEvent.h  btkEventCollection.h  btkEvent_p.h  btkException.h  btkForcePlatform.cpp  btkForcePlatform.h  btkForcePlatformCollection.h  btkForcePlatformTypes.h  btkForcePlatformWithCalibrationMatrix.h  btkGeometry.h  btkHardware.cpp  btkHardware.h  btkHardware_p.h  btkIMU.cpp  btkIMU.h  btkIMUCollection.h  btkIMUTypes.h  btkJoint.cpp  (+58 more)
Code/IO/: CMakeLists.txt  btkAMTIForcePlatformFileIO.cpp  btkAMTIForcePlatformFileIO.h  btkANBFileIO.cpp  btkANBFileIO.h  btkANCFileIO.cpp  btkANCFileIO.h  btkANGFileIO.cpp  btkANGFileIO.h  btkANxFileIOUtils.cpp  btkANxFileIOUtils.h  btkANxFileIOUtils_p.cpp  btkANxFileIOUtils_p.h  btkASCIIFileWriter.cpp  btkASCIIFileWriter.h  btkAcquisitionFileIO.cpp  btkAcquisitionFileIO.h  btkAcquisitionFileIOFactory.cpp  btkAcquisitionFileIOFactory.h  btkAcquisitionFileIOFactory_info.h  btkAcquisitionFileIOFactory_p.h  btkAcquisitionFileIOFactory_registration.cpp  btkAcquisitionFileIOFactory_registration.h  btkAcquisitionFileIOHandle.h  btkAcquisitionFileIORegister.h  btkAcquisitionFileReader.cpp  btkAcquisitionFileReader.h  btkAcquisitionFileWriter.cpp  btkAcquisitionFileWriter.h  btkBSFFileIO.cpp  btkBSFFileIO.h  btkBinaryByteOrderFormat.h  btkBinaryFileStream.cpp  btkBinaryFileStream.h  btkBinaryFileStream.tpp  btkBinaryFileStream_mmfstream.cpp  btkBinaryFileStream_mmfstream.h  btkBinaryFileStream_mmfstream_p.cpp  btkBinaryFileStream_mmfstream_p.h  btkBinaryStream.cpp  (+70 more)
Code/Model/: CMakeLists.txt  btkBodyEnums.h  btkJoint.cpp  btkJoint.h  btkJoint_p.h  btkLandmarksTranslator.cpp  btkLandmarksTranslator.h  btkLandmarksTranslator_p.h  btkModel.cpp  btkModel.h  btkModel_p.h  btkPluginGait.cpp  btkPluginGait.h  btkPluginGait_p.h  btkRelativePosition.cpp  btkRelativePosition.h  btkRelativePosition_p.h  btkRelativeReferenceFrame.cpp  btkRelativeReferenceFrame.h  btkRelativeReferenceFrame_p.h  btkRig.cpp  btkRig.h  btkRig_p.h  btkSegment.cpp  btkSegment.h  btkSegment_p.h  btklardModel.h
Code/Models/: CMakeLists.txt  btkBasicMotionBuilder.cpp  btkBasicMotionBuilder.h  btkCalibrationProcedure.h  btkModelCalibrationFilter.cpp  btkModelCalibrationFilter.h  btkModelConfiguratorTemplate.h  btkModelJCSKinematicFilter.cpp  btkModelJCSKinematicFilter.h  btkModelMotionFilter.cpp  btkModelMotionFilter.h  btkMotionBuilder.h  btkStaticCalibrationProcedure.cpp  btkStaticCalibrationProcedure.h  btkUpperLimbModelConfigurator.cpp  btkUpperLimbModelConfigurator.h
Code/Trial/: CMakeLists.txt  btkEvent.cpp  btkEvent.h  btkEvent_p.h  btkTimeSequence.cpp  btkTimeSequence.h  btkTimeSequence_p.h  btkTrial.cpp  btkTrial.h  btkTrial_p.h  btklardTrial.h
Test/: AcquisitionTest.h  C3DFileIOTest.h  C3DFileReaderTest.h  CMakeLists.txt  MarkerCollectionTest.h  MetaDataEntryTest.h  MetaDataEntryValueTest.h  PipelineTest.h  VTKMarkerSourceTest.h  main.cpp
Testing/: CMakeLists.txt
Testing/C++/: ANBFileIOTest.h  ANBFileReaderTest.h  ANBFileWriterTest.h  ANCFileIOTest.h  ANGFileIOTest.h  AcquisitionTest.h  AcquisitionUnitConverterTest.h  AnalogOffsetRemoverTest.h  AnalogTest.h  BSFFileReaderTest.h  C3DFileReaderTest.h  C3DFileWriterTest.h  CLBFileIOTest.h  CLBFileReaderTest.h  CMakeLists.txt  CombTest.h  DelsysEMGFileIOTest.h  DelsysEMGFileReaderTest.h  EMFFileReaderTest.h  EMxFileIOTest.h  EMxFileReaderTest.h  EigenFilt_Util.h  EigenIIRFilterDesignTest.h  ForcePlatformsExtractorTest.h  GRxFileReaderTest.h  GammalnTest.h  HPFFileIOTest.h  HPFFileReaderTest.h  Interp1Test.h  KistlerDATFileReaderTest.h  MDFFileReaderTest.h  MOMFileIOTest.h  MedianTest.h  MergeAcquisitionFilterTest.h  MetaDataInfoTest.h  NullPtrTest.h  PWRFileReaderTest.h  PipelineTest.h  PointTest.h  RAHFileReaderTest.h  (+20 more)
Testing/Code/: AMTIForcePlatformFileIOTest.h  ANCFileIOTest.h  (+96 more)
Utilities/: CMakeLists.txt  StringStreamBuf.h  stdint.h  timeval.h
(+1526 files in other folders)
