IF(BUILD_TESTING AND NOT BTK_TESTING_DATA_PATH)
  SET(BTK_TESTING_DATA_PATH "${BTK_TESTING_DATA_PATH}" CACHE PATH "Path for the data used by the unit tests." FORCE)
ENDIF(BUILD_TESTING AND NOT BTK_TESTING_DATA_PATH)

ADD_SUBDIRECTORY(Code)
IF(BTK_WRAP_PYTHON)
  ADD_SUBDIRECTORY(Python)
ENDIF(BTK_WRAP_PYTHON)