IF(USE_INCLUDED_BOOST)
  ADD_SUBDIRECTORY(boost)
ENDIF(USE_INCLUDED_BOOST)

IF(NOT BTK_USE_SYSTEM_EIGEN2)
  ADD_SUBDIRECTORY(eigen2)
ENDIF(NOT BTK_USE_SYSTEM_EIGEN2)

IF(MSVC)
  IF(NOT BTK_INSTALL_NO_DEVELOPMENT)
    FILE(GLOB __files "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
    INSTALL(FILES ${__files}
      DESTINATION ${BTK_INSTALL_INCLUDE_DIR_CM24}/Utilities
      COMPONENT Development)
  ENDIF(NOT BTK_INSTALL_NO_DEVELOPMENT)
ENDIF(MSVC)