ADD_SUBDIRECTORY(ParserCmdLine)

IF(USE_INCLUDED_BOOST)
  ADD_SUBDIRECTORY(boost)
ENDIF(USE_INCLUDED_BOOST)

IF(NOT BTK_USE_SYSTEM_EIGEN3)
  ADD_SUBDIRECTORY(eigen3)
ENDIF(NOT BTK_USE_SYSTEM_EIGEN3)

IF(MSVC)
  IF(NOT BTK_INSTALL_NO_DEVELOPMENT)
    FILE(GLOB __files "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
    INSTALL(FILES ${__files}
      DESTINATION ${BTK_INSTALL_INCLUDE_DIR_CM24}/Utilities
      COMPONENT Development)
  ENDIF(NOT BTK_INSTALL_NO_DEVELOPMENT)
ENDIF(MSVC)

OPTION(BUILD_UTILITY_EASYINSTALL "Utility to compile and install BTK easily (Requires Java SDK not JRE)" OFF)
IF(BUILD_UTILITY_EASYINSTALL)
  ADD_SUBDIRECTORY(EasyInstall)
ENDIF(BUILD_UTILITY_EASYINSTALL)