ADD_SUBDIRECTORY(eigen3)

IF(USE_INCLUDED_BOOST)
  ADD_SUBDIRECTORY(boost)
ENDIF(USE_INCLUDED_BOOST)

IF(MSVC)
  IF(NOT BTK_INSTALL_NO_DEVELOPMENT)
    FILE(GLOB __files "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
    INSTALL(FILES ${__files}
      DESTINATION ${BTK_INSTALL_INCLUDE_DIR_CM24}/Utilities
      COMPONENT Development)
  ENDIF(NOT BTK_INSTALL_NO_DEVELOPMENT)
ENDIF(MSVC)

CMAKE_DEPENDENT_OPTION(BUILD_INTERNAL_UTILITY_EASYINSTALL
                       "Utility to compile and install BTK easily (Requires Java SDK not JRE)" OFF
                       BTK_SHOW_INTERNAL_PROJECT_OPTIONS OFF)

IF(BUILD_INTERNAL_UTILITY_EASYINSTALL)
  ADD_SUBDIRECTORY(EasyInstall)
ENDIF(BUILD_INTERNAL_UTILITY_EASYINSTALL)